--- a/index.html
+++ b/index.html
@@ -79,13 +79,19 @@
     .build()?;
 
 app.start().<span class="keyword">await</span>?;</code></pre>
-                <pre class="code-content hidden" data-content="http"><code><span class="comment">// Basic Axum example</span>
-<span class="keyword">use</span> <span class="namespace">axum</span>::{routing::get, Router};
+                <pre class="code-content hidden" data-content="http"><code><span class="comment">// Framework-native HTTP server</span>
+<span class="keyword">use</span> <span class="namespace">elif_http</span>::*;
 
-<span class="keyword">async fn</span> <span class="function">hello</span>() -&gt; &amp;<span class="type">'static str</span> { <span class="string">"Hello from elif.rs!"</span> }
+<span class="keyword">async fn</span> <span class="function">hello</span>() -&gt; <span class="type">Response</span> {
+    <span class="type">Response</span>::text(<span class="string">"Hello from elif.rs!"</span>)
+}
 
-<span class="keyword">let</span> app = Router::new()
-    .route(<span class="string">"/"</span>, get(hello));</code></pre>
+<span class="keyword">let</span> server = <span class="type">HttpServer</span>::new(container)
+    .route_get(<span class="string">"/"</span>, hello)
+    .bind(<span class="string">"0.0.0.0:3000"</span>)
+    .<span class="keyword">await</span>?;
+
+server.serve().<span class="keyword">await</span>?;</code></pre>
             </div>
             
             <div class="hero-actions">
@@ -452,23 +458,25 @@ app.start().<span class="keyword">await</span>?;</code></pre>
                 <div class="example-section" style="margin-top:1.5rem">
                     <h3>UserController: active users</h3>
                     <div class="code-example full">
-                        <pre><code><span class="keyword">pub</span> <span class="keyword">async fn</span> <span class="function">active_users</span>(
+                        <pre><code><span class="keyword">use</span> <span class="namespace">elif_http</span>::{Request, Response};
+
+<span class="keyword">pub</span> <span class="keyword">async fn</span> <span class="function">active_users</span>(
     &amp;<span class="keyword">self</span>,
-    <span class="type">State</span>(container): <span class="type">State</span>&lt;<span class="type">Arc</span>&lt;<span class="type">Container</span>&gt;&gt;,
-    <span class="type">Query</span>(params): <span class="type">Query</span>&lt;<span class="type">PaginationParams</span>&gt;,
-) -&gt; <span class="type">HttpResult</span>&lt;<span class="type">Response</span>&gt; {
-    <span class="keyword">let</span> pool = <span class="keyword">self</span>.get_pool(&amp;container).<span class="keyword">await</span>?;
+    request: <span class="type">Request</span>,
+) -&gt; <span class="type">Response</span> {
+    <span class="keyword">let</span> per_page = request.query().get(<span class="string">"per_page"</span>)
+        .and_then(|v| v.parse().ok()).unwrap_or(20);
+
     <span class="keyword">let</span> users = <span class="type">User</span>::query()
         .select(<span class="string">"*"</span>)
         .where_clause(<span class="string">"is_active = $1"</span>)
         .order_by(<span class="string">"created_at DESC"</span>)
-        .limit(params.per_page.unwrap_or(20) <span class="keyword">as</span> <span class="type">i32</span>)
-        .execute(&amp;pool)
-        .<span class="keyword">await</span>
-        .map_err(|e| <span class="type">HttpError</span>::database_error(&amp;e.to_string()))?;
+        .limit(per_page)
+        .execute(request.db())
+        .<span class="keyword">await</span>?;
 
-    <span class="keyword">let</span> api_response = <span class="type">ApiResponse</span>::success(users);
-    <span class="keyword">Ok</span>((&nbsp;<span class="type">StatusCode</span>::OK, <span class="type">Json</span>(api_response)&nbsp;).into_response())
+    <span class="type">Response</span>::json(<span class="type">ApiResponse</span>::success(users))
+        .with_status(200)
 }</code></pre>
                     </div>
                 </div>
@@ -476,15 +484,11 @@ app.start().<span class="keyword">await</span>?;</code></pre>
                 <div class="example-section" style="margin-top:1.5rem">
                     <h3>Controller routes wiring</h3>
                     <div class="code-example full">
-                        <pre><code><span class="keyword">pub fn</span> <span class="function">setup_user_routes</span>(
-    router: <span class="namespace">axum</span>::<span class="type">Router</span>&lt;<span class="type">Arc</span>&lt;<span class="type">Container</span>&gt;&gt;
-) -&gt; <span class="namespace">axum</span>::<span class="type">Router</span>&lt;<span class="type">Arc</span>&lt;<span class="type">Container</span>&gt;&gt; {
-    <span class="keyword">let</span> user_controller = <span class="type">Arc</span>::new(<span class="type">UserController</span>::new());
+                        <pre><code><span class="keyword">use</span> <span class="namespace">elif_http</span>::*;
 
-    router
-        .route(<span class="string">"/users"</span>, <span class="namespace">axum</span>::routing::get({ /* controller.index */ }))
-        .route(<span class="string">"/users"</span>, <span class="namespace">axum</span>::routing::post({ /* controller.create */ }))
-        .route(<span class="string">"/users/active"</span>, <span class="namespace">axum</span>::routing::get({ /* controller.active_users */ }))
+<span class="keyword">pub fn</span> <span class="function">setup_routes</span>() -&gt; <span class="type">Router</span> {
+    <span class="type">Router</span>::new()
+        .controller(<span class="string">"/users"</span>, <span class="type">UserController</span>::new())
 }</code></pre>
                     </div>
                 </div>
