--- a/index.html
+++ b/index.html
@@ -340,19 +340,18 @@ server.use_middleware(middleware);</code></pre>
             
             <!-- Creative Package Display -->
             <div class="ecosystem-display">
-                <!-- Core Package Highlight -->
+                <!-- CLI Package Highlight -->
                 <div class="package-hero">
                     <div class="package-icon">
                         <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                            <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
-                            <line x1="9" y1="9" x2="15" y2="15"/>
-                            <line x1="15" y1="9" x2="9" y2="15"/>
+                            <polyline points="4 17 10 11 4 5"/>
+                            <line x1="12" y1="19" x2="20" y2="19"/>
                         </svg>
                     </div>
-                    <h3>elif-core</h3>
-                    <p>The foundation. Everything starts here.</p>
+                    <h3>elifrs</h3>
+                    <p>The CLI that makes everything possible. Start here.</p>
                     <div class="package-stats">
-                        <span>45k downloads</span>
+                        <span>cargo install elifrs</span>
                         <span>v0.9.1</span>
                     </div>
                 </div>
@@ -360,45 +359,45 @@ server.use_middleware(middleware);</code></pre>
                 <!-- Package Categories -->
                 <div class="package-categories">
                     <div class="category dx-focused">
-                        <h4><span class="category-label">DX</span> Developer Tools</h4>
+                        <h4><span class="category-label">DX</span> Core Packages</h4>
                         <div class="package-list">
                             <div class="package-item">
-                                <code>elif-cli</code>
-                                <span>Scaffold, build, deploy</span>
+                                <code>elif-http</code>
+                                <span>HTTP server & routing</span>
                             </div>
                             <div class="package-item">
-                                <code>elif-watch</code>
-                                <span>Hot reload everything</span>
+                                <code>elif-orm</code>
+                                <span>Database ORM</span>
                             </div>
                             <div class="package-item">
-                                <code>elif-test</code>
-                                <span>Testing made simple</span>
+                                <code>elif-auth</code>
+                                <span>Authentication</span>
                             </div>
                             <div class="package-item">
-                                <code>elif-debug</code>
-                                <span>Visual debugging</span>
+                                <code>elif-validation</code>
+                                <span>Input validation</span>
                             </div>
                         </div>
                     </div>
                     
                     <div class="category ax-focused">
-                        <h4><span class="category-label">AX</span> AI Integration</h4>
+                        <h4><span class="category-label">AX</span> Advanced Features</h4>
                         <div class="package-list">
                             <div class="package-item">
-                                <code>elif-ai</code>
-                                <span>LLM-ready APIs</span>
+                                <code>elif-openapi</code>
+                                <span>Auto API docs</span>
                             </div>
                             <div class="package-item">
-                                <code>elif-docs</code>
-                                <span>Auto documentation</span>
+                                <code>elif-testing</code>
+                                <span>Test utilities</span>
                             </div>
                             <div class="package-item">
-                                <code>elif-complete</code>
-                                <span>Smart completions</span>
+                                <code>elif-security</code>
+                                <span>Security middleware</span>
                             </div>
                             <div class="package-item">
-                                <code>elif-analyze</code>
-                                <span>Code insights</span>
+                                <code>elif-cache</code>
+                                <span>Caching system</span>
                             </div>
                         </div>
                     </div>
@@ -410,31 +409,31 @@ server.use_middleware(middleware);</code></pre>
                     <div class="package-grid">
                         <div class="package-card">
                             <div class="package-header">
-                                <code>elif-orm</code>
-                                <span class="package-badge">Popular</span>
+                                <code>elif-core</code>
+                                <span class="package-badge">Foundation</span>
                             </div>
-                            <p>Type-safe database queries</p>
+                            <p>Core framework architecture</p>
                         </div>
                         <div class="package-card">
                             <div class="package-header">
-                                <code>elif-auth</code>
+                                <code>elif-http</code>
                                 <span class="package-badge">Essential</span>
                             </div>
-                            <p>Authentication done right</p>
+                            <p>Web server & WebSockets</p>
                         </div>
                         <div class="package-card">
                             <div class="package-header">
-                                <code>elif-graphql</code>
-                                <span class="package-badge">New</span>
+                                <code>elif-queue</code>
+                                <span class="package-badge">Production</span>
                             </div>
-                            <p>GraphQL in minutes</p>
+                            <p>Background job processing</p>
                         </div>
                         <div class="package-card">
                             <div class="package-header">
-                                <code>elif-cache</code>
-                                <span class="package-badge">Fast</span>
+                                <code>elif-middleware</code>
+                                <span class="package-badge">V2</span>
                             </div>
-                            <p>Redis & in-memory caching</p>
+                            <p>Composable middleware</p>
                         </div>
                     </div>
                 </div>
