--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             </svg>
                         </a>
                         <button class="btn btn-secondary btn-hero" id="copy-install">
-                            <code>cargo install elif</code>
+                            <code>cargo install elifrs</code>
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <rect x="9" y="9" width="13" height="13" rx="2" ry="2"/>
                                 <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"/>
